retrieveUnpackaged/objects/Object_Item__c.object
<CustomObject>
    <fields>
        <fullName>FY_16_Usage__c</fullName>
        <label>FY 16 Usage Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FY_17_Usage_Count__c</fullName>
        <label>FY 17 Usage Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Form_Number__c</fullName>
        <label>Form Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Priority__c</fullName>
        <label>Migration Priority</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_Status__c</fullName>
        <label>Migration Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Do Not Migrate</fullName>
                </value>
                <value>
                    <fullName>Known</fullName>
                </value>
                <value>
                    <fullName>Orphan</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Responsible_Org__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsible Org</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Object Items</relationshipLabel>
        <relationshipName>Object_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Workflow</fullName>
                </value>
                <value>
                    <fullName>Fill and Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Object Item</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Object Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Object Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>